--- a/Final Assignment_HF2379.Rmd
+++ b/Final Assignment_HF2379.Rmd
@@ -80,6 +80,27 @@ I would include the cluster assignement as a confounding variable in an explanat
 * Secondary Analysis: Is an individuals race associated with adverse health events in NYC if adjusted by a confounding variable created with information on diesel exhaust, proximity to NPL sites, housing before 1960, and low household income by census tract? 
 
 
+## Part 3: Ethical Considerations
+
+### **Question 1**:   
+
+Underrepresentation of certain populations is a huge potential risk. If researchers use social media data to develope intervetions, then they might only be targeting those who are frequent users of social media. Using the most extreme example of Twitter, we can see that using social media data will not be generalizable to the many populations. 
+
+A Pew Research Center [publication](https://www.pewresearch.org/internet/2019/04/24/sizing-up-twitter-users/) in 2019 described the demographics of Twitter. In general, Twitter users are younger, more educated, and wealthier. Those are just the users. If you consider that 10% of users generate 90% of the content, then the differences are more extreme. 
+
+If we use algorithms based on social media data to identify ways to increase early detection and prevention stratgies, these interventions will work best on younger, educated, and weathly populations. This will further increase disparities and health inequities. 
+
+
+### **Question 2**:   
+
+Solving underrepresentation and bias in data is extremely difficult. If researchers had access to demographic data for each social media user, they could possibly create a data set that is representative of the population and attempt to balance the data. However, this is most likely not feasible as most social media users do not report their demographic data. 
+
+Instead, researchers should use multiple data sources (Facebook, Twitter, Tumblr, etc) because each site has different user populations. By creating a diversified data set, there will be less underrepresentation. However, this solution comes with its own issues. Trying to uniformly create one data set from multiple social media sources could be next to impossible due to their differing nature. 
+
+Overall, it is almost impossible to solve underrepresentation in data; however, researchers can diversify their data sources and know that there will be limitations. 
+
+
+
 
 
 
